--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                         <div class="col-md-8 col-sm-12">
                                              <h3>Eatery Cafe &amp; Restaurant</h3>
                                              <h1>Our mission is to provide an unforgettable experience</h1>
-                                             <a href="#team" class="section-btn btn btn-default smoothScroll">Meet our chef</a>
+                                             <a href="#team" class="section-btn btn btn-default smoothScroll">Meet our Staff</a>
                                         </div>
                                    </div>
                               </div>
