--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </button>
 
                     <!-- lOGO TEXT HERE -->
-                    <a href="index.html" class="navbar-brand"><img src="images/bhd2.jpg" alt=""/></a>
+                    <a href="index.html" class="navbar-brand"><img src="images/2bhd2.jpg" alt=""/></a>
                </div>
 
                <!-- MENU LINKS -->
@@ -161,17 +161,17 @@
                               <img src="images/ed.jpg" class="img-responsive" alt="">
                                    <div class="team-hover">
                                         <div class="team-item">
-                                             <h4>Duis vel lacus id magna mattis vehicula</h4> 
+                                             <h4>Princess Patricia Enenche Agada</h4> 
                                              <ul class="social-icon">
-                                                  <li><a href="#" class="fa fa-linkedin-square"></a></li>
-                                                  <li><a href="#" class="fa fa-envelope-o"></a></li>
+                                                  <li><a href="#" class="fa fa-facebook-square"></a></li>
+                                                  <li><a href="mailto:benhannahdevefoundation1@gmail.com" class="fa fa-envelope-o"></a></li>
                                              </ul>
                                         </div>
                                    </div>
                          </div>
                          <div class="team-info">
-                              <h3>New Catherine</h3>
-                              <p>Kitchen Officer</p>
+                              <h3>Princess Patricia Enenche Agada</h3>
+                              <p>Executive Director</p>
                          </div>
                     </div>
 
